Resolve category nav bar issue on safari

--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -1857,7 +1857,6 @@ p {
 }
 
 .bet-this-game.all-soccer-bets {
-  transform: translateZ(10px);
   overflow-x: initial;
 }
 
